--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
 </head>
 <body>
   <div class="container">
-    <h1>Your connection is not private</h1>
-    <p>Attackers might be trying to steal your information from <span class="example-url">www.example.com</span>, such as passwords, messages, or credit cards.</p>
-    <button class="learn-more-btn">Learn more</button>
-    <button class="hide-advanced-btn">HIDE ADVANCED</button>
-    <button class="back-to-safety-btn">Back to safety</button>
-    <p class="error-code">NET::ERR_CERT_DATE_INVALID</p>
-    <p class="help-improve">Help improve Safe Browsing by sending some system information and page content to Google. <a href="#" class="privacy-policy">Privacy policy</a>.</p>
+    <div class="header">
+      <h1>Your connection is not private</h1>
+    </div>
+    <div class="content">
+      <p>Attackers might be trying to steal your information from <span class="example-url">www.example.com</span>, such as passwords, messages, or credit cards.</p>
+      <button class="learn-more-btn">Learn more</button>
+      <button class="hide-advanced-btn">HIDE ADVANCED</button>
+      <button class="back-to-safety-btn">Back to safety</button>
+      <p class="error-code">NET::ERR_CERT_DATE_INVALID</p>
+      <p class="help-improve">Help improve Safe Browsing by sending some system information and page content to Google. <a href="#" class="privacy-policy">Privacy policy</a>.</p>
+    </div>
   </div>
 
   <script src="script.js"></script>
